# DCScan-GUI

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
client/: CMakeLists.txt
client/lib/qtadvanceddocking/debug/include/qtadvanceddocking/: DockAreaWidget.h
client/lib/qtadvanceddocking/debug/lib/: qtadvanceddocking.lib
client/lib/qtadvanceddocking/lib/: qtadvanceddocking_static.lib
client/res/: res.qrc
client/settings/: ads_perspectives.ini
client/src/: app_win32.rc  autogen_macros.h  common.h  main.cpp
client/src/dialogs/: connect_dialog.h  connect_dialog.ui  newchannel_dialog.h  newchannel_dialog.ui
client/src/extras/: qindicator.h
client/src/splash/: loading.h
client/src/utils/: worker.h
client/src/widgets/: dnd_outputconfig.h  dnd_outputconfig.ui
client/src/windows/: acquisitioncontrol_window.cpp  acquisitioncontrol_window.h  acquisitioncontrol_window.ui  channelmanager_window.cpp  channelmanager_window.h  channelmanager_window.ui  channelviz_window.cpp  channelviz_window.h  channelviz_window.ui  clinometer_window.cpp  clinometer_window.h  clinometer_window.ui  connect_window.cpp  connect_window.h  connect_window.ui  freejog_window.cpp  freejog_window.h  freejog_window.ui  hist_window.cpp  hist_window.h  histsett_window.cpp  histsett_window.h  layout_window.cpp  layout_window.h  layout_window.ui  log_window.h  log_window.ui  main_window.cpp  main_window.h  mcaspectrum_window.cpp  mcaspectrum_window.h  mcaspectrum_window.ui  position_window.cpp  position_window.h  position_window.ui  simulation_window.cpp  simulation_window.h  simulation_window.ui  spectraldisplay_window.cpp  spectraldisplay_window.h  (+7 more)
client/styles/: darkorange.css  default.css
server/: CMakeLists.txt
server/src/: main.cpp
src/: main.cpp
src/windows/: hist_window.cpp  histsett_window.cpp  main_window.h  test_window.ui
